--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -76,13 +76,10 @@ import '../styles/styles.css';
         <img src="assets/about.jpg" alt="about" />
       </div>
       <div class="about__content">
-        <p class="section__subheader">ABOUT US</p>
-        <h2 class="section__header">The Best Holidays Start Here!</h2>
+        <p class="section__subheader">SOBRE NOSOTROS</p>
+        <h2 class="section__header">¡Las Mejores Vacaciones Comienzan Aquí!</h2>
         <p class="section__description">
-          With a focus on quality accommodations, personalized experiences, and
-          seamless booking, our platform is dedicated to ensuring that every
-          traveler embarks on their dream holiday with confidence and
-          excitement.
+          Con un enfoque en alojamientos de calidad, atención personalizada y reservas sin complicaciones, nuestro hotel está comprometido a brindarte una experiencia única. Cada detalle está pensado para que tu viaje sea cómodo, seguro y lleno de momentos inolvidables.
         </p>
         <div class="about__btn">
           <button class="btn">Read More</button>
@@ -196,12 +193,12 @@ import '../styles/styles.css';
     <!-- Columna izquierda -->
     <div class="services__left">
       <div class="services__heading">
-  <h1 class="services__title-bg sr-fade-up">SERVICES</h1>
-  <h2 class="services__title sr-fade-up">Our Services</h2>
+  <h1 class="services__title-bg sr-fade-up">EXTRAS</h1>
+  <h2 class="services__title sr-fade-up">Upgrade Disponible</h2>
 
   <!-- Agrupar párrafos en un bloque separado -->
   <div class="services__description-center">
-    <p class="services__subtitle">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
+    <p class="services__subtitle">Eleva tu experiencia con opciones exclusivas pensadas para tu comodidad y disfrute. Un toque extra de confort que transforma tu estadía en algo verdaderamente especial.</p>
   </div>
 </div>
 
