--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -93,13 +93,6 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
-.header {
-  background-image: url("assets/header.jpg");
-  background-position: center center;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
 nav {
   position: fixed;
   isolation: isolate;
@@ -844,5 +837,30 @@ nav {
 
 .zoom-container img.revealed {
   transform: scale(1);
+  opacity: 1;
+}
+
+
+
+.header-carousel {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 0;
+  overflow: hidden;
+}
+
+.carousel-image {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
+}
+
+.carousel-image.active {
   opacity: 1;
 }
