--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,17 +34,17 @@ import '../styles/styles.css';
           </div>
         </div>
         <ul class="nav__links" id="nav-links">
-          <li><a href="#home">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#service">Services</a></li>
-          <li><a href="#explore">Explore</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#home">Inicio</a></li>
+          <li><a href="#about">Acerca de</a></li>
+          <li><a href="#service">Servicios</a></li>
+          <li><a href="#explore">Explorar</a></li>
+          <li><a href="#contact">Contacto</a></li>
         </ul>
         <button class="btn nav__btn">Book Now</button>
       </nav>
       <div class="section__container header__container" id="home">
-        <p>Simple - Unique - Friendly</p>
-        <h1>Make Yourself At Home<br />In Our <span>Hotel</span>.</h1>
+        <p>Sencillo - Único - Amigable</p>
+        <h1>Siéntase como en casa<br />En nuestro <span>Hotel</span>.</h1>
       </div>
     </header>
 
