--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -237,17 +237,55 @@ import '../styles/styles.css';
 </section>
 
 
+<section class="service" id="service">
+     <div class="section__container service__container">
+    <div class="service__content">
+      <p class="section__subheader">Beneficios Incluidos</p>
+      <h2 class="section__header">¡Ya Viene Contigo!</h2>
+      <p class="section__description">
+        Todo esto lo tienes gratis desde que reservas con nosotros.
+      </p>
+      <ul class="service__list">
+        <li>
+          <span><i class="ri-parking-box-line"></i></span>
+          Estacionamiento privado
+        </li>
+        <li>
+          <span><i class="ri-leaf-line"></i></span>
+          Zona natural rodeada de árboles
+        </li>
+        <li>
+          <span><i class="ri-football-line"></i></span>
+          Cancha para deportes o juegos
+        </li>
+        <li>
+          <span><i class="ri-map-pin-2-line"></i></span>
+          Consejos turísticos y mapas gratuitos
+        </li>
+        <li>
+          <span><i class="ri-wifi-line"></i></span>
+          Wi-Fi rápido en todo el hotel
+        </li>
+      </ul>
+    </div>
+  </div>
+    </section>
+
 
     <section class="explore" id="explore">
-      <p class="section__subheader">EXPLORE</p>
-      <h2 class="section__header">What's New Today.</h2>
-      <div class="explore__bg">
-        <div class="explore__content">
-          <p class="section__description">10th MAR 2023</p>
-          <h4>A New Menu Is Available In Our Hotel.</h4>
-          <button class="btn">Continue</button>
-        </div>
-      </div>
+      <p class="section__subheader">UBICACIÓN</p>
+      <h2 class="section__header">Encuéntranos en Bermejo, Tarija</h2>
+    <div class="map__container">
+  <iframe
+    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3784.8535639886794!2d-64.9657881256508!3d-22.723998531647056!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9406f9576fd91e17%3A0x858d42f6fc4b1e86!2sBermejo%2C%20Tarija!5e0!3m2!1ses!2sbo!4v1716123784707!5m2!1ses!2sbo"
+    width="100%"
+    height="450"
+    style="border:0; border-radius: 10px;"
+    allowfullscreen=""
+    loading="lazy"
+    referrerpolicy="no-referrer-when-downgrade"
+  ></iframe>
+</div>
     </section>
 
     <footer class="footer" id="contact">
